Trying to fix alignment

--- a/http/style.css
+++ b/http/style.css
@@ -26,6 +26,7 @@ nav {
   right: 0;
   bottom: 0;
   left: 301px;
+  /*float:left; height:50%; margin-bottom:-120px;*/
 }
 
 footer {
@@ -84,14 +85,11 @@ p.inline-select input[type="checkbox"] + label {
 
 p.inline-select label {
   margin: 0 5px 0 0;
-  /* My try at aigning label left*/
-  float: left;
 } 
 
 p.inline-select select {
   margin: 0;
   width: 200px;
-  text-align: right;
 }
 
 p.inline-select {
